# dummy_remote

./: .coverage  pyproject.toml
src/dummy_remote/: console.py
tests/: test_console.py
