[tool.poetry]
name = "dummy-remote"
version = "0.1.0"
description = ""
authors = ["Sahil Dilwali <sahil.dilwali@bp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dummy-remote = "dummy_remote.console:main"