[tool.poetry]
name = "dummy-remote"
version = "0.1.0"
description = ""
authors = ["Sahil Dilwali <sahil.dilwali@bp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.3.1"}
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dummy-remote = "dummy_remote.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dummy_remote"]

[tool.coverage.report]
show_missing = true
fail_under = 100